fix: loading component not showing

--- a/src/components/Songs.scss
+++ b/src/components/Songs.scss
@@ -2,7 +2,7 @@
 
 .Songs {
   position: relative;
-  height: min-content;
+  height: 100%;
 }
 
 .Songs__header {
